[build-system]
requires = ['setuptools>=61.0']
build-backend = 'setuptools.build_meta'

[project]
name = "inventree-sapn-generator"
version = "0.1.1"
description = "InvenTree plugin to automatically generate SAPN (Sequential Auto Part Numbers) using SA_CCC and SA_SS parameters"
authors = [
    {name = "Nichlas Walsøe", email = "lavissawow@gmail.com"}
]
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: InvenTree",
]
requires-python = ">=3.9"

[project.urls]
"Homepage" = "https://github.com/still-asking/inventree-sapn-generator"

[project.entry-points."inventree_plugins"]
SAPNGenerator = 'ipn_generator.generator:SAPNGeneratorPlugin'

[tool.ruff.lint]
ignore = [
    "E501",
    "W605"
]

[tool.flake8]
ignore = [
    "E501",
    "W605"
]

