[build-system]
requires = ['setuptools>=61.0']
build-backend = 'setuptools.build_meta'

[project]
name = "inventree-zpn-generator"
version = "0.2.0"
description = "InvenTree plugin to automatically generate ZPN using ZPN_CAT and ZPN_SUBCAT parameters"
authors = [
    {name = "Simon F.", email = ""}
]
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: InvenTree",
]
requires-python = ">=3.9"

[project.urls]
"Homepage" = "https://github.com/zeqL/inventree-zpn-generator/"

[project.entry-points."inventree_plugins"]
ZPNGenerator = 'ipn_generator.generator:ZPNGeneratorPlugin'

[tool.ruff.lint]
ignore = [
    "E501",
    "W605"
]

[tool.flake8]
ignore = [
    "E501",
    "W605"
]



